dfir_rs/tests/compile-fail-stable/surface_reduce_keyed_badtype_int.stderr
error[E0271]: type mismatch resolving `<Iter<Drain<'_, {integer}>> as Stream>::Item == (_, _)`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_int.rs:3:9
  |
3 |         source_iter(0..1)
  |         ^^^^^^^^^^^ expected `(_, _)`, found integer
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ---------- required by a bound introduced by this call
  |
  = note: expected tuple `(_, _)`
              found type `{integer}`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_int.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0271]: type mismatch resolving `<Iter<Drain<'_, {integer}>> as Stream>::Item == (_, u32)`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_int.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ expected `(_, u32)`, found integer
  |
  = note: expected tuple `(_, u32)`
              found type `{integer}`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_int.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`

error[E0271]: type mismatch resolving `<Iter<Drain<'_, {integer}>> as Stream>::Item == (_, u32)`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_int.rs:5:16
  |
5 |             -> for_each(std::mem::drop);
  |                ^^^^^^^^ expected `(_, u32)`, found integer
  |
  = note: expected tuple `(_, u32)`
              found type `{integer}`
note: required by a bound in `__check_inputs`
 --> tests/compile-fail-stable/surface_reduce_keyed_badtype_int.rs:4:16
  |
4 |             -> fold_keyed(|| 0, |old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^ required by this bound in `__check_inputs`
